--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.9.1
 Django==5.2.5
+django-jazzmin==3.0.1
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 dotenv==0.9.9
 psycopg2-binary==2.9.10
+PyJWT==2.10.1
 python-dotenv==1.1.1
+pytz==2025.2
+rest-framework-simplejwt==0.0.2
 sqlparse==0.5.3
 typing_extensions==4.14.1
