--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 anyio==4.10.0
 asgiref==3.9.1
-certifi==2025.8.3
-charset-normalizer==3.4.3
 CacheControl==0.14.3
 cachetools==5.5.2
 certifi==2025.8.3
@@ -13,7 +11,6 @@ django-jazzmin==3.0.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 dotenv==0.9.9
-idna==3.10
 exceptiongroup==1.3.0
 firebase_admin==7.1.0
 google-api-core==2.25.1
@@ -34,6 +31,7 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 msgpack==1.1.1
+pillow==11.3.0
 proto-plus==1.26.1
 protobuf==6.32.0
 psycopg2-binary==2.9.10
@@ -43,6 +41,7 @@ pycparser==2.22
 PyJWT==2.10.1
 python-dotenv==1.1.1
 pytz==2025.2
+qrcode==8.2
 requests==2.32.5
 rest-framework-simplejwt==0.0.2
 rsa==4.9.1
